--- a/style.css
+++ b/style.css
@@ -1,33 +1,126 @@
-h1{
-    font-family: 'Press Start 2P';font-size: 50px;
+html{
+    cursor: none;
 }
 
-.welcomepage{
-    color: aliceblue;
-    background-color: rgb(50, 27, 119);
-    padding: 100px;
-
-}
+#circularcursor {
+    background-color: transparent;
+    border:1px solid black;    
+    height:20px;
+    width:20px;
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    position: absolute;
+    z-index: 1;
+  }
 
 body {
-    background-color: #800080; /* Purple background color */
     margin: 0;
     padding: 0;
-  }
-  
-  .grid-container {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-    height: 100vh; /* Set the height to 100% of the viewport height */
-  }
-  
-  .grid-item {
-    border: 1px solid white; /* White border for grid items */
-  }
-  
-  .content {
-    text-align: center;
-    padding: 50px;
-    color: white;
-  }
+    color: #fff;
+    font-family: 'Press Start 2P' ;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    color: #fff;
+    
+}
+
+.content-section {
+    width: 1724px;
+    height: 2234px;
+    left: 0;
+    top: 0;
+    position: absolute;
+}
+
+.communication-designer-section {
+    width: 2713px;
+    height: 141px;
+    left: 4px;
+    top: 1892px;
+}
+
+
+.grid-background {
+    background-image: url('images/website\ bg.png');
+    background-size: cover;
+}
+
+.footer{
+    background-color: #fff;
+    color: blueviolet;
+}
+
+.display-1.heading-font {
+    font-family: 'Press Start 2p';
+    font-size:200px ;
+}
+
+.navbar-brand.heading-font{
+    font-family: 'clash display';
+    color: #fff;
+    font-size: 25px;
+}
+
+.d-flex{
+    font-family: "clash display";
+    font-size: 25px;
+}
+
+.d-flex a:hover{
+    color: black;
+}
+
+#hero{
+    font-family: 'Press Start 2p';
+    font-size: 50px;
+    padding-bottom: 300px;
+}
+
+
+#about{
+    font-family: 'clash display';
+    text-align: right;
+}
+
+.flex-container{
+    display:flex;
+    position: absolute;
+    
+}
+
+.shape-container{
+    width:800px;
+    height:800px;
+    background: #fff;
+    display:flow-root;
+    left:50%;
+    position:absolute;
+    transform: translate(-50%,-50%);
+    transform: rotate(-45deg);
+    transform-origin:0 100%;
+    position: relative;
+    padding-top: 200px;
+
+}
+
+
+.AMhead{
+    text-align: right;
+    font-size: 40px;
+    display:contents;
+}
+
+.p{
+    font-size: 50px;
+}
+
+.AMimage{
+    padding: 20px;
+}
+
+
